--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -363,13 +363,8 @@ Sollte der E-Mail-Test fehlschlagen und das Textfeld zeigt keine grüne Erfolgsm
 
 <img src="update_7_test/Screenshot_6.png" alt="img4"></img>
 
-<h5>Überprüfung der Funktionalität des AKTIN Data Warehouse</h5>
-Eine Anleitung für die Überprüfung der technischen Funktionalität des AKTIN Data Warehouse und für die Überprüfung der Plausibilität finden Sie unter der Rubrik [Checkliste für Funktionalität.](https://www.aktin.org/de-de/support/anwender.html).
-<br></br>
-
-
 <h4>Betrieb des AKTIN Data Warehouse</h4>
-Anleitungen zur Benutzerverwaltung sowie dem Betrieb des AKTIN- und i2b2 Data Warehouses finden Sie unter der Rubrik [Support für Anwender](https://www.aktin.org/de-de/support/anwender.html).
+Anleitungen zur Benutzerverwaltung sowie dem Betrieb des AKTIN- und i2b2 Data Warehouses finden Sie unter der Rubrik [Support für Anwender](https://aktin.org/support/).
 <br></br>
 
 <h4>Weitere Anmerkungen</h4>
